<resources>
    <string name="app_name">Daily Deal</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="login">Login</string>
    <string name="l_or_r">Login / Register</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="don_t_have_a_account">Don\'t have a account?</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_account">Already have account?</string>
    <string name="send_password_rest_link">Send password reset link</string>
    <string name="products">products</string>
    <string name="category_image">category image</string>
    <string name="category_title">Category title</string>
    <string name="categories">Categories</string>
    <string name="just_for_you">Just For You</string>
    <string name="show_all">Show All</string>
    <string name="title">Title</string>
    <string name="available">Available:</string>
    <string name="description">Description</string>
    <string name="sku">SKU:</string>
    <string name="banner">Banner</string>
    <string name="wishlist">Wishlist</string>
    <string name="quantity">Quantity</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="notification">Notification</string>
    <string name="top_rated">Top Rated</string>
    <string name="price">Price</string>
    <string name="week_deals">Week Deals</string>
    <string name="local_bd_food">Local BD Food</string>
    <string name="_0">0</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="my_orders">My Orders</string>
    <string name="wellcome_msg">ArabianPure.com</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="product_title">Product Title</string>
    <string name="delete">Delete</string>
    <string name="checkout">Checkout</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="options">Options</string>
    <string name="message">Message</string>
    <string name="account_information">Account Information</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="refund_policy">Refund Policy</string>
    <string name="customer_support">Customer Support</string>
    <string name="help_center">Help Center</string>
    <string name="customer_service">Customer Service</string>
    <string name="no_product">There are no items in this category. Please check back soon!</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="tracking_id">Tracking id</string>
    <string name="search">Search</string>
    <string name="todo">TODO</string>
    <string name="show_less">Show Less</string>
    <string name="show_more">Show More</string>
    <string name="no_description">Item has no description</string>


</resources>