<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/card_back2"
    tools:context=".activity.LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/login_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/button_color"
        app:navigationIcon="@drawable/ic_arrow_back_white"
        app:title="Login"
        app:titleTextColor="@color/white"
        app:elevation="20dp"
        />




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="@dimen/_20sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">



                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_marginTop="10dp"
                    app:errorEnabled="true"
                    app:errorTextColor="@color/red"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:imeOptions="actionNext"/>
                </com.google.android.material.textfield.TextInputLayout>







                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:passwordToggleEnabled="true"
                    android:layout_marginTop="10dp"
                    app:errorEnabled="true"
                    app:errorTextColor="@color/red"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:imeOptions="actionDone"/>
                </com.google.android.material.textfield.TextInputLayout>



                <!--<CheckBox

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/remember_me" />-->



                <Button
                    android:id="@+id/login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/login"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:layout_marginTop="40dp"
                    android:layout_gravity="center"
                    />






                <TextView
                    android:id="@+id/login_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_your_password"
                    android:textColor="#0000ff"
                    android:layout_marginTop="10dp"
                    />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/don_t_have_a_account"
                        android:background="@color/button_color"
                        />
                    <TextView
                        android:id="@+id/login_register_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register"
                        android:textStyle="bold"
                        android:textColor="#0000ff"/>

                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>













</LinearLayout>