<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SingleProductActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/single_product_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/button_color"
        app:titleTextColor="@color/white"
        app:elevation="20dp"
        app:navigationIcon="@drawable/ic_arrow_back_white"
        />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.smarteist.autoimageslider.SliderView
                    android:id="@+id/single_product_image_slider"
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="@dimen/_200sdp"
                    android:layout_gravity="center"
                    />
            </androidx.cardview.widget.CardView>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp"
                android:layout_marginTop="10dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/single_product_offer_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_16sdp"
                        android:text="@string/price"
                        android:textColor="@color/black"
                        android:visibility="gone"/>
                    <TextView
                        android:id="@+id/single_product_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_16sdp"
                        android:text="@string/price"
                        android:textColor="@color/black"/>
                </LinearLayout>


                <TextView
                    android:id="@+id/single_product_wishlist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_14sdp"
                    android:text="@string/wishlist"
                    app:drawableLeftCompat="@drawable/ic_baseline_favorite_border_24"
                    app:drawableStartCompat="@drawable/ic_baseline_favorite_border_24"
                    android:visibility="visible"
                    android:textColor="@color/black"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />
                <TextView
                    android:id="@+id/single_product_wishlisted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_14sdp"
                    android:text="@string/wishlist"
                    app:drawableLeftCompat="@drawable/ic_baseline_favorite_24"
                    app:drawableStartCompat="@drawable/ic_baseline_favorite_24"
                    android:visibility="gone"
                    android:textColor="@color/black"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"
                android:layout_marginTop="10dp"
                android:padding="5dp"/>

            <TextView
                android:id="@+id/single_product_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_14sdp"
                android:text="@string/title"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:padding="5dp"/>
            <TextView
                android:id="@+id/single_product_stock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/available"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:padding="5dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"
                android:layout_marginTop="10dp"
                android:padding="5dp"/>



            <TextView
                android:id="@+id/single_product_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_14sdp"
                android:text="@string/description"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                />



            <TextView
                android:id="@+id/single_product_sku"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/sku"
                android:layout_marginTop="10dp"
                android:padding="5dp"/>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"
                android:layout_marginTop="10dp"
                android:padding="5dp"/>



            <TextView
                android:id="@+id/single_product_quantity_tview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/black"
                android:text="@string/quantity"
                android:layout_marginTop="10dp"
                android:padding="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:padding="5dp">
                <TextView
                    android:id="@+id/single_product_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_14sdp"
                    android:textColor="@color/black"
                    android:text="1"/>
                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/quantity_sub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:src="@drawable/ic_baseline_remove_circle_outline_24"
                    android:layout_marginStart="@dimen/_50sdp"
                    android:layout_marginLeft="@dimen/_50sdp" />
                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/quantity_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:src="@drawable/ic_baseline_add_circle_outline_24"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    />
            </LinearLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_to_cart"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_gravity="bottom|end"
                android:layout_margin="5dp"/>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>



</LinearLayout>